include/streamhtmlparser/src/streamhtmlparser/htmlparser.h


#define HTMLPARSER_MAX_STRING STATEMACHINE_RECORD_BUFFER_SIZE
#define HTMLPARSER_MAX_ENTITY_SIZE 10
enum htmlparser_attr_type {
    HTMLPARSER_ATTR_NONE,
    HTMLPARSER_ATTR_REGULAR,
    HTMLPARSER_ATTR_URI,
    HTMLPARSER_ATTR_JS,
    HTMLPARSER_ATTR_STYLE
};
typedef struct entityfilter_ctx_s {
    int buffer_pos;
    int in_entity;
    char buffer[HTMLPARSER_MAX_ENTITY_SIZE];
    char output[HTMLPARSER_MAX_ENTITY_SIZE];
} entityfilter_ctx;
void entityfilter_reset(entityfilter_ctx *ctx);
entityfilter_ctx *entityfilter_new(void);
void entityfilter_delete(entityfilter_ctx *ctx);
void entityfilter_copy(entityfilter_ctx *dst, entityfilter_ctx *src);
const char *entityfilter_process(entityfilter_ctx *ctx, char c);
typedef struct htmlparser_ctx_s {
  statemachine_ctx *statemachine;
  statemachine_definition *statemachine_def;
  jsparser_ctx *jsparser;
  entityfilter_ctx *entityfilter;
  int value_index;
  int in_js;
  char tag[HTMLPARSER_MAX_STRING];
  char attr[HTMLPARSER_MAX_STRING];
  char value[HTMLPARSER_MAX_STRING];
} htmlparser_ctx;
void htmlparser_reset(htmlparser_ctx *ctx);
void htmlparser_reset_mode(htmlparser_ctx *ctx, int mode);
htmlparser_ctx *htmlparser_new(void);
void htmlparser_copy(htmlparser_ctx *dst, const htmlparser_ctx *src);
int htmlparser_state(htmlparser_ctx *ctx);
int htmlparser_parse(htmlparser_ctx *ctx, const char *str, int size);
int htmlparser_is_attr_quoted(htmlparser_ctx *ctx);
int htmlparser_in_js(htmlparser_ctx *ctx);
const char *htmlparser_tag(htmlparser_ctx *ctx);
const char *htmlparser_attr(htmlparser_ctx *ctx);
const char *htmlparser_value(htmlparser_ctx *ctx);
int htmlparser_in_css(htmlparser_ctx *ctx);
int htmlparser_js_state(htmlparser_ctx *ctx);
int htmlparser_is_js_quoted(htmlparser_ctx *ctx);
int htmlparser_value_index(htmlparser_ctx *ctx);
int htmlparser_is_url_start(htmlparser_ctx *ctx);
int htmlparser_attr_type(htmlparser_ctx *ctx);
int htmlparser_get_line_number(htmlparser_ctx *ctx);
void htmlparser_set_line_number(htmlparser_ctx *ctx, int line);
int htmlparser_get_column_number(htmlparser_ctx *ctx);
void htmlparser_set_column_number(htmlparser_ctx *ctx, int column);
const char *htmlparser_get_error_msg(htmlparser_ctx *ctx);
int htmlparser_insert_text(htmlparser_ctx *ctx);
void htmlparser_delete(htmlparser_ctx *ctx);