src/include/streamhtmlparser/src/streamhtmlparser/statemachine.h


enum {
    STATEMACHINE_ERROR = 127
};
#define STATEMACHINE_RECORD_BUFFER_SIZE 1024
#define STATEMACHINE_MAX_STR_ERROR 80
struct statemachine_ctx_s;
typedef void(*state_event_function)(struct statemachine_ctx_s *, int, char,
                                    int);
typedef struct statemachine_definition_s {
    int num_states;
    const int* const* transition_table;
    const char* const* state_names;
    state_event_function *in_state_events;
    state_event_function *enter_state_events;
    state_event_function *exit_state_events;
} statemachine_definition;
typedef struct statemachine_ctx_s {
    int current_state;
    int next_state;
    statemachine_definition *definition;
    char current_char;
    int line_number;
    int column_number;
    char record_buffer[STATEMACHINE_RECORD_BUFFER_SIZE];
    size_t record_pos;
    size_t position;
    int reached_end;
    int recording;
    char error_msg[STATEMACHINE_MAX_STR_ERROR];
    void *user;
} statemachine_ctx;
void statemachine_definition_populate(statemachine_definition *def,
                                     const int* const* transition_table,
                                     const char* const* state_names);
void statemachine_in_state(statemachine_definition *def, int st,
                           state_event_function func);
void statemachine_enter_state(statemachine_definition *def, int st,
                                     state_event_function func);
void statemachine_exit_state(statemachine_definition *def, int st,
                                    state_event_function func);
statemachine_definition *statemachine_definition_new(int states);
void statemachine_definition_delete(statemachine_definition *def);
int statemachine_get_state(statemachine_ctx *ctx);
void statemachine_set_state(statemachine_ctx *ctx, int state);
void statemachine_start_record(statemachine_ctx *ctx);
const char *statemachine_stop_record(statemachine_ctx *ctx);
const char *statemachine_record_buffer(statemachine_ctx *ctx);
static inline size_t statemachine_record_length(statemachine_ctx *ctx) {
  return ctx->record_pos + 1;
}
static inline int statemachine_get_line_number(statemachine_ctx *ctx) {
  return ctx->line_number;
}
static inline void statemachine_set_line_number(statemachine_ctx *ctx,
                                                int line) {
  ctx->line_number = line;
}
static inline int statemachine_get_column_number(statemachine_ctx *ctx) {
  return ctx->column_number;
}
static inline void statemachine_set_column_number(statemachine_ctx *ctx,
                                                  int column) {
  ctx->column_number = column;
}
static inline const char *statemachine_get_error_msg(statemachine_ctx *ctx) {
  if (ctx->next_state == STATEMACHINE_ERROR) {
    return ctx->error_msg;
  } else {
    return NULL;
  }
}
void statemachine_reset(statemachine_ctx *ctx);
statemachine_ctx *statemachine_new(statemachine_definition *def,
                                   void *user);
statemachine_ctx *statemachine_duplicate(statemachine_ctx *ctx,
                                         statemachine_definition *def,
                                         void *user);
void statemachine_copy(statemachine_ctx *dst,
                       statemachine_ctx *src,
                       statemachine_definition *def,
                       void *user);
int statemachine_parse(statemachine_ctx *ctx, const char *str, int size);
void statemachine_delete(statemachine_ctx *ctx);
void statemachine_encode_char(char chr, char *output, size_t len);