src/include/streamhtmlparser/src/streamhtmlparser/jsparser.h


#define JSPARSER_RING_BUFFER_SIZE 18
typedef struct jsparser_ctx_s {
  statemachine_ctx *statemachine;
  statemachine_definition *statemachine_def;
  int buffer_start;
  int buffer_end;
  char buffer[JSPARSER_RING_BUFFER_SIZE];
} jsparser_ctx;
void jsparser_reset(jsparser_ctx *ctx);
jsparser_ctx *jsparser_new(void);
jsparser_ctx *jsparser_duplicate(jsparser_ctx *src);
void jsparser_copy(jsparser_ctx *dst, jsparser_ctx *src);
int jsparser_state(jsparser_ctx *ctx);
int jsparser_parse(jsparser_ctx *ctx, const char *str, int size);
void jsparser_delete(jsparser_ctx *ctx);
void jsparser_buffer_append_chr(jsparser_ctx *js, char chr);
void jsparser_buffer_append_str(jsparser_ctx *js, const char *str);
char jsparser_buffer_pop(jsparser_ctx *js);
char jsparser_buffer_get(jsparser_ctx *js, int pos);
int jsparser_buffer_set(jsparser_ctx *js, int pos, char value);
void jsparser_buffer_slice(jsparser_ctx *js, char *buffer, int start, int end);
int jsparser_buffer_last_identifier(jsparser_ctx *js, char *identifier);